Merge branch 'master' of https://github.com/Shonsama/Neuedu_lab
# Conflicts:
#	Backend/EurekaServer.log